@@ -16,7 +16,7 @@ import us.lsi.path.EGraphPath.PathType;
 public class TestPD {
 
 	public static void main(String[] args) {
-		Locale.setDefault(new Locale("en", "US"));
+		Locale.setDefault(Locale.of("en", "US"));
 
 		for (Integer id_fichero = 1; id_fichero < 4; id_fichero++) {
 
