@@ -153,7 +153,7 @@ public class MatricesPD {
 	}
 	
 	public static void main(String[] args) {
-		Locale.setDefault(new Locale("en", "US"));
+		Locale.setDefault(Locale.of("en", "US"));
 		MatricesPD.leeFichero("./ficheros/matrices.txt");
 		
 		MatrixProblem start = MatrixProblem.of(0,MatricesPD.n);
