@@ -1,62 +1,12 @@
 package us.lsi.alg.mochila.manual;
 
-import java.util.ArrayList;
+
 import java.util.HashSet;
 import java.util.List;
 import java.util.Locale;
 import java.util.Set;
 
 public class MochilaBT {
-	
-	public static class StateMochila {
-			private MochilaProblem vertice;
-			private Integer valorAcumulado; 
-			private List<Integer> acciones; 
-			private List<MochilaProblem> vertices; 
-					
-		private StateMochila(MochilaProblem vertice, Integer valorAcumulado, List<Integer> acciones,
-					List<MochilaProblem> vertices) {
-			super();
-			this.vertice = vertice;
-			this.valorAcumulado = valorAcumulado;
-			this.acciones = acciones;
-			this.vertices = vertices;
-		}
-
-		public static StateMochila of(MochilaProblem vertex) {
-			List<MochilaProblem> vt = new ArrayList<>();
-			vt.add(vertex);
-			return new StateMochila(vertex,0,new ArrayList<>(),vt);
-		}
-
-		void forward(Integer a) {
-			this.acciones.add(a);
-			MochilaProblem vcn = this.vertice().vecino(a);		
-			this.vertices.add(vcn);
-			this.valorAcumulado = this.valorAcumulado() + a * DatosMochila.valor(this.vertice().index());
-			this.vertice = vcn;
-		}
-
-		void back(Integer a) {
-			this.acciones.remove(this.acciones.size()-1);
-			this.vertices.remove(this.vertices.size()-1);
-			this.vertice = this.vertices.get(this.vertices.size()-1);
-			this.valorAcumulado = this.valorAcumulado() - a * DatosMochila.valor(this.vertice.index());			
-		}
-		
-		SolucionMochila solucion() {
-			return SolucionMochila.of(MochilaBT.start,this.acciones);
-		}
-
-		public MochilaProblem vertice() {
-			return vertice;
-		}
-
-		public Integer valorAcumulado() {
-			return valorAcumulado;
-		}
-		
-	}
 	
 	public static MochilaProblem start;
 	public static StateMochila estado;
@@ -100,7 +50,7 @@ public class MochilaBT {
 	}
 
 	public static void main(String[] args) {
-		Locale.setDefault(new Locale("en", "US"));
+		Locale.setDefault(Locale.of("en", "US"));
 		DatosMochila.datos("ficheros/objetosMochila.txt");
 		DatosMochila.capacidadInicial = 78;
 		MochilaProblem v1 = MochilaProblem.of(0, DatosMochila.capacidadInicial);
