@@ -35,7 +35,7 @@ public class MonedaVoraz {
 	}
 
 	public static void main(String[] args) {
-		Locale.setDefault(new Locale("en", "US"));
+		Locale.setDefault(Locale.of("en", "US"));
 		MonedaVertex.datosIniciales("ficheros/monedas2.txt", 401);
 		System.out.println(Moneda.monedas);
 		System.out.println(Moneda.monedas.size());
