@@ -18,7 +18,7 @@ public class Test_BT {
 	public static void main(String[] args) {
 
 		// Set up
-		Locale.setDefault(new Locale("en", "US"));
+		Locale.setDefault(Locale.of("en", "US"));
 
 		for (Integer id_fichero = 0; id_fichero < 7; id_fichero++) {
 
