@@ -15,7 +15,7 @@ import us.lsi.graphs.virtual.EGraph;
 public class TestBT {
 
 	public static void main(String[] args) {
-		Locale.setDefault(new Locale("en", "US"));
+		Locale.setDefault(Locale.of("en", "US"));
 
 		for (Integer id_fichero = 1; id_fichero < 4; id_fichero++) {
 
