@@ -6,7 +6,7 @@ public class TestHeuristic {
 
 	public static void main(String[] args) {
 		
-		Locale.setDefault(new Locale("en", "US"));		
+		Locale.setDefault(Locale.of("en", "US"));		
 		for (Integer i = 0; i < 1; i++) {
 			DatosProductos.iniDatos("ficheros/productoscomp"+ i +".txt");
 			VertexProductos start = VertexProductos.initial();
