@@ -81,7 +81,7 @@ public class SubconjuntosHeuristic {
 	public static void main(String[] args) {
 
 		
-		Locale.setDefault(new Locale("en", "US"));
+		Locale.setDefault(Locale.of("en", "US"));
 
 		for (Integer id_fichero = 1; id_fichero < 3; id_fichero++) {
 
