@@ -12,7 +12,7 @@ public class TestAStar {
 	public static void main(String[] args) {
 
 	// Set up
-	Locale.setDefault(new Locale("en", "US"));
+	Locale.setDefault(Locale.of("en", "US"));
 
 	for (Integer id_fichero = 1; id_fichero < 3; id_fichero++) {
 
