@@ -31,7 +31,7 @@ public class TestCamino {
 public static void main(String[] args) {
 
 		
-		Locale.setDefault(new Locale("en", "US"));
+		Locale.setDefault(Locale.of("en", "US"));
 
 		for (Integer id_fichero = 2; id_fichero < 3; id_fichero++) {
 
