@@ -80,7 +80,7 @@ public class SubconjuntosPD {
 	}
 	
 	public static void main(String[] args) {
-		Locale.setDefault(new Locale("en", "US"));
+		Locale.setDefault(Locale.of("en", "US"));
 		for (Integer id_fichero = 1; id_fichero < 3; id_fichero++) {
 			DatosSubconjuntos.iniDatos("ficheros/subconjuntos" + id_fichero + ".txt");
 			System.out.println("\n\n>\tResultados para el test " + id_fichero + "\n");
