@@ -41,7 +41,7 @@ public class Heuristica {
 	}
 	
 	public static void main(String[] args) {
-		Locale.setDefault(new Locale("en", "US"));
+		Locale.setDefault(Locale.of("en", "US"));
 		DatosTyP.datos("ficheros/tareas.txt",5);
 		TyPProblem e1 = TyPProblem.first();
 		System.out.println(DatosTyP.tareas);
