@@ -81,7 +81,7 @@ public class TyPAStar {
 	}
 
 	public static void main(String[] args) {
-		Locale.setDefault(new Locale("en", "US"));
+		Locale.setDefault(Locale.of("en", "US"));
 		DatosTyP.datos("ficheros/tareas.txt",5);
 		TyPProblem e1 = TyPProblem.first();
 		TyPAStar a = of(e1);
